tests/gabc-dump/should-fail/bad-sign.gabc
name: bad sign;
%%
(c3) (.)
